--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
     "vue": "^2.6.14",
     "vue-loader": "^15.10.1",
     "vue-style-loader": "^4.1.3",
