--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "@synergy/lms-ui-kit": "^1.4.2",
+    "keycloak-js": "^22.0.1",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   }
 }
