--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@synergy/lms-ui-kit": "^1.4.2",
+    "axios": "^1.4.0",
     "keycloak-js": "^22.0.1",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
