--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "keycloak-js": "^22.0.1",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
